simple css fix for text overflow in feedback messages. MID-1207

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/message/MainFeedback.css
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/message/MainFeedback.css
@@ -53,6 +53,8 @@ ul.messagesTop li, ul.tempMessagesTop li {
 
 ul.messagesTop ul li, ul.tempMessagesTop ul li {
 	padding: 1px 0px;
+    text-overflow: ellipsis;
+    overflow: auto;
 }
 
 ul.messagesTop .messages-details {
